Switching policies to a google doc

--- a/policies.html
+++ b/policies.html
@@ -13,48 +13,7 @@
 	<body>
 		<a href="/">❰ Home</a>
 		<p>
-		These policies are the same as they were for our May dance.
-		
-		<h1 id="Cancellation">Cancellation</h1>
-		We may cancel events during periods of elevated risk to community health or if our performers/organizers are sick.<br>
-		We will try to decide no later than 48 hours before the event.<br>
-		Dancers should <b>subscribe to our <a href="mailto:CommonFloorContraDance@gmail.com">mailing list</a></b> or <b>check <a href="/">the homepage</a> before heading to a dance</b> to see if it is cancelled.<br>
-
-		<h1 id="COVID-19">COVID-19</h1>
-		<h2>In an attempt to mitigate the risk of community spread, these rules apply to all dance attendees:</h2>
-		<ul>
-			<li>Dancers <b>must wear a well-fitted N95</b> (or similar) mask while inside the building at all times (aside from drinking). We hope to have some available, but please don't rely on it.</li>
-			<li>Dancers <b>must provide proof of up-to-date vaccination</b> (primary series plus 1 booster, if eligible).</li>
-			<li>Dancers <b>must provide a way to contact them</b> so they can be notified of COVID-19 cases after the dance.</li>
-			<li>Dancers <b>acknowledge and assume risk</b> of contracting or being exposed to COVID-19 at this event. They absolve the dance’s organizers, performers, volunteers, and venue of any liability for contracting or being exposed to COVID-19 at this event.</li>
-			<li>Dancers <b>must not attend if they feel ill in any way</b>, including experiencing any COVID-19 symptoms such as: cough, congestion or runny nose, headache, fatigue, muscle or body aches, fever or chills, loss of smell or taste, diarrhea, nausea or vomiting, and/or shortness of breath or difficulty breathing.</li>
-			<li>Dancers <b>must receive a negative test result before attending if they had COVID-19</b> in the last 14 days (after my 5-day minimum isolation period has ended and all symptoms are gone).</li>
-			<li>Dancers <b>must receive a negative test result before attending if they had close contact with someone with COVID-19</b> in the 14 days before the dance.</li>
-			<li>Dancers <b>must notify <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a> if you test positive for COVID-19 in the 10 days following</b> a dance, so they can provide exposure notifications to all attendees.</li>
-		</ul>
-
-		<h1 id="CodeOfConduct">Code of Conduct</h1>
-		<ul>
-			<li>Practice good communication and ask for consent. Be attentive to how your partner dances.</li>
-			<li>Invite people to dance and always respect their answers when they say “no.” Do not pressure them.</li>
-			<li>Speak and act with respect. There will be a wide range of experience levels, and people from a variety of backgrounds on the floor.</li>
-			<li>People’s chosen dance role does not reflect their gender expression. If you’re confused on the dance floor, ask them what their dance role is.</li>
-			<li>Check in about dance roles, injuries, and flourishes each time you dance with someone. Ask for consent every time! If someone agrees to something once (twirling, dips, a close embrace) it does not mean they always consent to it.</li>
-			<li>If you see a dancer in your set make a mistake, do your best to take a moment to verbally show that dancer where they have to be next. Do not shove or grab other dancers. It is more important to have fun, than to get everything right.</li> 
-			<li>Dance with safety in mind. On the crowded dance floor, be aware of nearby dancers when twirling, avoid squeezing hands and forceful leading or self-flourishing. Keep in mind that many dancers have injuries that may not be visible.</li>
-			<li>Be there for each other. If you see something problematic, or someone struggling, either let the dance organizers know or approach that person and check in with them.</li>
-			<li>Give and take feedback gracefully. For example: "Would you like (or May I offer) a dancing tip?"</li>
-			<li>We do not tolerate hate language of any kind, at any time, at our dances.  If you bring it to our dance, you will be escorted out immediately.</li>
-			<li>Systematic or continued unwanted and annoying actions, including threats and demands, will not be tolerated. This can be verbal, physical, or sexual, and none of it is ok.</li>
-			<li>Our events are drug and alcohol free, do not arrive intoxicated.</li>
-		</ul>
-		<p>
-		This a living, breathing document and will change over time. We invite <a href="mailto:CommonFloorContraDance@gmail.com">community input</a> and any changes will be published on this website.
-		<p>
-		<footer>
-		<script>
-			document.write('Last <a href="https://github.com/blackboxlogic/CommonFloorContra.Dance/commits/main/policies.html">modified</a> on ' + document.lastModified);
-		</script>
-		</footer>
+		<iframe src="https://docs.google.com/document/d/e/2PACX-1vTzv1HPM2BgnLkStGsrLMVQVnFimwRnXUx7PqcyhnXhVqTlJYiMrfgTHhfZ5k3N9fHoto56j7ZbI-eM/pub?embedded=true"
+				frameborder=0 style='width:100%; height:100%; padding:0;'></iframe>
 	</body>
 </html>
