--- a/policies.html
+++ b/policies.html
@@ -14,6 +14,8 @@
 		<a href="/">❰ Home</a>
 		<p>
 		<iframe src="https://docs.google.com/document/d/e/2PACX-1vTzv1HPM2BgnLkStGsrLMVQVnFimwRnXUx7PqcyhnXhVqTlJYiMrfgTHhfZ5k3N9fHoto56j7ZbI-eM/pub?embedded=true"
-				frameborder=0 style='width:100%; height:100%; padding:0;'></iframe>
+			frameborder=0 style='width:100%; height:100%; padding:0;'>
+			Loading…
+		</iframe>
 	</body>
 </html>
