--- a/policies.html
+++ b/policies.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%; width: 100%; ">
 	<head>
 		<title>Policies | Common Floor Contra Dance</title>
 		<meta content="utf-8" http-equiv="encoding">
@@ -10,12 +10,14 @@
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 		<link rel="canonical" href="https://www.commonfloorcontra.dance/policies" media="screen"/>
 	</head>
-	<body>
-		<a href="/">❰ Home</a>
-		<p>
-		<iframe src="https://docs.google.com/document/d/e/2PACX-1vTzv1HPM2BgnLkStGsrLMVQVnFimwRnXUx7PqcyhnXhVqTlJYiMrfgTHhfZ5k3N9fHoto56j7ZbI-eM/pub?embedded=true"
-			frameborder=0 style='width:100%; height:100%; padding:0;'>
-			Loading…
-		</iframe>
-	</body>
+	<body style="height: 100%; width: 100%; overflow: hidden; margin: 0">
+		<div>
+			<a href="/">❰ Home</a>
+		</div>
+		<div style="height: 100%; width: 100%; ">
+			<iframe src="https://docs.google.com/document/d/e/2PACX-1vTzv1HPM2BgnLkStGsrLMVQVnFimwRnXUx7PqcyhnXhVqTlJYiMrfgTHhfZ5k3N9fHoto56j7ZbI-eM/pub?embedded=true"
+					frameborder=0 style='height: 100%; width: 100%'>
+			</iframe>
+		</div>
+</body>
 </html>
