Convert about to google doc

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%; width: 100%; ">
 	<head>
 		<title>About | Common Floor Contra Dance</title>
 		<meta content="utf-8" http-equiv="encoding">
@@ -10,36 +10,14 @@
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 		<link rel="canonical" href="https://www.commonfloorcontra.dance/about" media="screen"/>
 	</head>
-	<body>
-		<a href="/">❰ Home</a>
-
-		<h1 id="organizers">Organizers</h1>
-		These events have been organized with care by:
-		<ul>
-			<li>Alex Hennings - Technology</li>
-			<li>Danielle Walczak - Volunteering</li>
-			<li>Ellen Hodgkin - Creativity</li>
-			<li>Hannah Chamberlain - Talent</li>
-			<li>Jennifer Dryden - Enthusiasm</li>
-			<li>Samson Fowler - Safety</li>
-		</ul>
-        
-		<h1 id="mission">Mission</h1>
-		At the CFC we want to create an environment of connection, community, and joy for all levels of dancers from all backgrounds. We cultivate this culture with a foundation of consent, both spoken and practiced. We strive to have a dance that is all-gender and consent-based, and we call Larks/Ravens. Each time you dance at CFC we want to make sure you feel happy, safe, comfortable and empowered to communicate. CFC helps uphold a comfortable and safe environment by teaching consent at all our dances and by having a designated safety team.
-		<p>
-		The safety and success of our dance is a team effort and that includes you! If you choose to dance with us we ask that you commit to following our code of conduct. 
-		
-		<h1 id="faq">Frequently Asked Questions</h1>
-		<b>Q:</b> Are we affiliated with the previous "Second Saturday Topsham Contra" series?<br>
-		<b>A:</b> Nope, just inspired by it.
-		<p>
-		<b>Q:</b> Which dance role names do we use?<br>
-		<b>A:</b> Larks and Ravens.
-		<p>
-		<footer>
-		<script>
-			document.write("Last modified on " + document.lastModified);
-		</script>
-		</footer>
+	<body style="height: 100%; width: 100%; overflow: hidden; margin: 0">
+		<div>
+			<a href="/">❰ Home</a>
+		</div>
+		<div style="height: 100%; width: 100%; ">
+			<iframe src="https://docs.google.com/document/d/e/2PACX-1vT2ieV9D_EyVUSk8FZQyKIQRl-1S6trFaN_JcAHJ2_tvftFXiBjEkIhPF_RSrRnKBPZaYIayZRdgzPN/pub?embedded=true"
+					frameborder=0 style='height: 100%; width: 100%'>
+			</iframe>
+		</div>
 	</body>
 </html>
