Change volunteer to google doc

--- a/volunteer.html
+++ b/volunteer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%; width: 100%; ">
 	<head>
 		<title>Volunteer | Common Floor Contra Dance</title>
 		<meta content="utf-8" http-equiv="encoding">
@@ -10,25 +10,14 @@
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 		<link rel="canonical" href="https://www.commonfloorcontra.dance/volunteer" media="screen"/>
 	</head>
-	<body>
-		<a href="/">❰ Home</a>
-
-		<h1 id="volunteering">Volunteering</h1>
-		This event can't run without volunteers. Please email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a> to volunteer for the dance and <b>specify the date and role(s) you're interested in</b>. Volunteering gets you free entry and a warm fuzzy feeling.
-		<p>
-		<h3>Positions:</h3>
-		<ul>
-			<li><b>Setup</b> 6:30-7:00 (2 helpers: furniture, fans, signs)</li>
-			<li><b>Door 6:45-7:45</b> (4 helpers: check vax/masks/CoC, shoes, money, stamp)</li>
-			<li><b>Door 7:45-8:30</b> (2 helpers: same as above)</li>
-			<li><b>Door 8:30-9:15</b> (1 helper: same as above)</li>
-			<li><b>Takedown</b> 10:00-10:15 (2+ helpers: furniture, fans, signs)</li>
-		</ul>
-		
-		<footer>
-		<script>
-			document.write("Last modified on " + document.lastModified);
-		</script>
-		</footer>
+	<body style="height: 100%; width: 100%; overflow: hidden; margin: 0">
+		<div>
+			<a href="/">❰ Home</a>
+		</div>
+		<div style="height: 100%; width: 100%; ">
+			<iframe src="https://docs.google.com/document/d/e/2PACX-1vRXIDmRokfoHX2UjrLSeXlFcW6YGil0EmHjnHoLYAmfr35pVTg50Nm21Bn2LqL9FgQxBYHjFQcqUq-Y/pub?embedded=true"
+					frameborder=0 style='height: 100%; width: 100%'>
+			</iframe>
+		</div>
 	</body>
 </html>
