Convert front page to gdoc

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%; width: 100%; ">
 	<head>
 		<title>Common Floor Contra Dance in Southern Maine</title>
 		<meta content="utf-8" http-equiv="encoding">
@@ -10,39 +10,16 @@
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 		<link rel="canonical" href="https://www.commonfloorcontra.dance"/>
 	</head>
-	<body>
-		<a href="\about">❱ About</a><br>
-		<a href="\volunteer">❱ Volunteer</a><br>
-		<a href="\policies">❱ Policies</a><br>
-		<h1>Common Floor Contra Dance in Topsham Maine</h1>
-		<h2>Friday, September 9th, 2022</h2>
-		Topsham Grange Hall (<a href="https://goo.gl/maps/BWjQiKwE2KEPh49q7">47 Pleasant St, Topsham, Maine</a>)<br>
-		Calling by:
-		<ul>
-			<li>Maggie Robinson</li>
-		</ul>
-		Music by:
-		<ul>
-   			<li>Rose Jackson and friends</li>
-		</ul>
-		Beginner lesson at 7pm<br>
-		Dance from 7:30 to 10pm<br>
-		$10 to $20 sliding scale (cash or <a href="https://account.venmo.com/pay?recipients=Samson-Fowler-93&note=CFCD%20Dance">venmo</a>)<br>
-		Bring a water bottle and clean shoes to dance in<br>
-		See our <a href="/policies">policies</a> for covid information
-		<h2>You can help!</h2>
-		<ul>
-			<li><a href="/volunteer">Volunteer</a></li>
-			<!--li>Share our <a href="https://www.facebook.com/events/564618912056683">facebook event</a></li-->
-			<li>Join our <a href="https://www.facebook.com/groups/1041892349764445">facebook group</a></li>
-		</ul>
-		<p>
-		For questions or to sign up for future dance reminders, email <a href="mailto:CommonFloorContraDance@gmail.com">CommonFloorContraDance@gmail.com</a>
-		<!--embed src="SummerFlyer.pdf#zoom=50" type="application/pdf" width="100%" height="610vh"-->
-		<p>
-		Site by Alex, all typos are his.
-		<script>
-			document.write("Last modified on " + document.lastModified);
-		</script>
+	<body style="height: 100%; width: 100%; overflow: hidden; margin: 0">
+		<div>
+			<a href="\about">❱ About</a><br>
+			<a href="\volunteer">❱ Volunteer</a><br>
+			<a href="\policies">❱ Policies</a><br>
+		</div>
+		<div style="height: 100%; width: 100%; ">
+			<iframe src="https://docs.google.com/document/d/e/2PACX-1vSz9cH1aF427AoqqOU56kdjFRR-FMkQFTVGlQGcgKoeXHYTE_CKi52BYPYymqHA3wVzgsdz27CC44XA/pub?embedded=true"
+					frameborder=0 style='height: 100%; width: 100%'>
+			</iframe>
+		</div>
 	</body>
 </html>
