move style to css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="height: 100%; width: 100%; ">
+<html>
 	<head>
 		<title>Common Floor Contra Dance in Southern Maine</title>
 		<meta content="utf-8" http-equiv="encoding">
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 		<link rel="canonical" href="https://www.commonfloorcontra.dance"/>
 	</head>
-	<body style="height: 100%; width: 100%; overflow: hidden; margin: 0">
+	<body>
 		<div>
 			<a href="\about">❱ About</a><br>
 			<a href="\volunteer">❱ Volunteer</a><br>
