Move links from frame to index

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Common Floor Contra Dance in Southern Maine</title>
+		<title>Common Floor Contra Dance in Portland Maine</title>
 		<meta content="utf-8" http-equiv="encoding">
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="keywords" content="common floor contra dance Topsham Maine">
+		<meta name="keywords" content="common floor contra dance Portland Maine">
 		<link rel="icon" type="image/x-icon" href="logo.png">
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 		<link rel="canonical" href="https://www.commonfloorcontra.dance"/>
@@ -15,6 +15,8 @@
 			<a href="\about">❱ About</a><br>
 			<a href="\volunteer">❱ Volunteer</a><br>
 			<a href="\policies">❱ Policies</a><br>
+			<a href="https://www.facebook.com/groups/1041892349764445">❱ Our Facebook Group</a><br>
+			<a href="mailto:CommonFloorContraDance@gmail.com">❱ Email us (or ask to subscribe)</a><br>
 		</div>
 		<iframe src="https://docs.google.com/document/d/e/2PACX-1vSz9cH1aF427AoqqOU56kdjFRR-FMkQFTVGlQGcgKoeXHYTE_CKi52BYPYymqHA3wVzgsdz27CC44XA/pub?embedded=true"
 				frameborder=0 style='height: 100%; width: 100%'>
