--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Common Floor Contra Dance in Portland Maine</title>
+		<title>Portland Contra Dance</title>
 		<meta content="utf-8" http-equiv="encoding">
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,8 +15,8 @@
 			<a href="\about">❱ About</a><br>
 			<a href="\volunteer">❱ Volunteer</a><br>
 			<a href="\policies">❱ Policies</a><br>
-			<a href="https://www.facebook.com/groups/1041892349764445">❱ Our Facebook Group</a><br>
-			<a href="mailto:CommonFloorContraDance@gmail.com">❱ Email us (or ask to subscribe)</a><br>
+			<a href="https://www.facebook.com/groups/1041892349764445">❱ Facebook Group</a><br>
+			<a href="mailto:CommonFloorContraDance@gmail.com">❱ Email Us (or ask to subscribe)</a><br>
 		</div>
 		<iframe src="https://docs.google.com/document/d/e/2PACX-1vSz9cH1aF427AoqqOU56kdjFRR-FMkQFTVGlQGcgKoeXHYTE_CKi52BYPYymqHA3wVzgsdz27CC44XA/pub?embedded=true"
 				frameborder=0 style='height: 100%; width: 100%'>
