--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Portland Contra Dance</title>
+		<title>Portland Maine Contra Dance</title>
 		<meta content="utf-8" http-equiv="encoding">
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
