Remove extra spaces around <script>

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <!-- https://schema.pythonanywhere.com/DanceEvent -->
 <!-- https://validator.schema.org/ -->
  
- < script type = "application/ld+json" > {
+<script type="application/ld+json">
+{
 	"@type": "WebSite",
 	"url": "https://www.commonfloorcontra.dance",
 	"name": "Common Floor Contra Dance",
@@ -22,7 +23,7 @@
 	"image":"https://www.commonfloorcontra.dance/logo.png",
 	"@context": "http://schema.org"
 }
-<  / script > 
+</script>
 		
 <script type="application/ld+json">
 {
