--- a/index.html
+++ b/index.html
@@ -49,6 +49,42 @@
 		"url":"https://www.tbemaine.org/",
 		"@context": "http://schema.org"
 	},
+	"member": [{
+			"@type": "OrganizationRole",
+			"member": {
+				"@type": "Person",
+				"name": "Alex Hennings"
+			},
+			"roleName": ["organizer"]
+		},{
+			"@type": "OrganizationRole",
+			"member": {
+				"@type": "Person",
+				"name": "Danielle Walczak"
+			},
+			"roleName": ["organizer"]
+		},{
+			"@type": "OrganizationRole",
+			"member": {
+			  "@type": "Person",
+			  "name": "Hannah Chamberlain"
+			},
+			"roleName": ["organizer"]
+		},{
+			"@type": "OrganizationRole",
+			"member": {
+				"@type": "Person",
+				"name": "Jennifer Dryden"
+			},
+			"roleName": ["organizer"]
+		},{
+			"@type": "OrganizationRole",
+			"member": {
+				"@type": "Person",
+				"name": "Samson Fowler"
+			},
+			"roleName": ["organizer"]
+		}],
 	"@context": "http://schema.org"
 }
 </script>
@@ -105,7 +141,7 @@
 			"@type": "OrganizationRole",
 			"member": {
 				"@type": "Person",
-				"name": "Katie McNally "
+				"name": "Katie McNally"
 			},
 			"roleName": ["fiddle"]
 		},{
