Add it as a local business?

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	"@context": "http://schema.org"
 }
 </script>
-		
+
 <script type="application/ld+json">
 {
 	"@type": "Organization",
@@ -114,7 +114,7 @@
 		"url":"https://www.tbemaine.org/",
 		"@context": "http://schema.org"
 	},
-	"name":"Portland Contra Dance",
+	"name":"Portland Temple Spooky Contra Dance",
 	"organizer": {
 		"@type": "Organization",
 		"name":"Common Floor Contra Dance",
@@ -173,8 +173,30 @@
 	"url":"https://www.CommonFloorContra.Dance"
 }
 </script>
-
-
+		
+<script type="application/ld+json">
+{
+	"address": {
+		"@type":"PostalAddress",
+		"addressLocality":"Portland",
+		"addressRegion":"ME",
+		"postalCode":"04103",
+		"streetAddress":"400 Deering Avenue",
+		"@context": "http://schema.org"
+	},
+	"image":"https://www.commonfloorcontra.dance/logo.png",
+	"name":"Portland Temple Contra Dance",
+	"openingHours":"Su 19:00-22:00",
+	"email":"commonfloorcontradance@gmail.com",
+	"url": "https://www.commonfloorcontra.dance",
+	"keywords":"contra,dance,contradance,Portland,Maine",
+	"@context":"http://schema.org",
+	"@type":"LocalBusiness"
+}
+</script>
+		
+		
+		
 	</head>
 	<body>
 		<div>
