--- a/index.html
+++ b/index.html
@@ -127,9 +127,10 @@
 		"@context": "http://schema.org"
 	},
 	"performer": [{
-		"@type": "Person",
+		"@type":"Person",
 		"hasOccupation":"Caller",
-		"name":"TBD",
+		"name":"Liz Nelson",
+		"url":"https://www.facebook.com/liznelsondancecaller/"
 		"@context": "http://schema.org"
 	},{
 		"@type": "MusicGroup",
@@ -176,6 +177,7 @@
 		
 <script type="application/ld+json">
 {
+	"@type":"LocalBusiness",
 	"address": {
 		"@type":"PostalAddress",
 		"addressLocality":"Portland",
@@ -190,8 +192,7 @@
 	"email":"commonfloorcontradance@gmail.com",
 	"url": "https://www.commonfloorcontra.dance",
 	"keywords":"contra,dance,contradance,Portland,Maine",
-	"@context":"http://schema.org",
-	"@type":"LocalBusiness"
+	"@context":"http://schema.org"
 }
 </script>
 		
