--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="keywords" content="common floor contra dance Portland Maine">
+		<meta name="description" content="A monthly contra dance series in Portland, Maine.">
 		<link rel="icon" type="image/x-icon" href="logo.png">
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 		<link rel="canonical" href="https://www.commonfloorcontra.dance"/>
