Add missing comma

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 		"@type":"Person",
 		"hasOccupation":"Caller",
 		"name":"Liz Nelson",
-		"url":"https://www.facebook.com/liznelsondancecaller/"
+		"url":"https://www.facebook.com/liznelsondancecaller/",
 		"@context": "http://schema.org"
 	},{
 		"@type": "MusicGroup",
