--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 		"url":"https://www.tbemaine.org/",
 		"@context": "http://schema.org"
 	},
-	"name":"Portland Temple Spooky Contra Dance",
+	"name":"Portland Temple Contra Dance",
 	"organizer": {
 		"@type": "Organization",
 		"name":"Common Floor Contra Dance",
