Add facebook group to org sameas

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<meta name="keywords" content="common floor contra dance Portland Maine">
 		<meta name="description" content="A monthly contra dance series in Portland, Maine.">
 		<link rel="icon" type="image/x-icon" href="logo.png">
+		<link rel="apple-touch-icon" href="logo.png"/>
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 		<link rel="canonical" href="https://www.commonfloorcontra.dance"/>
 
@@ -35,7 +36,7 @@
 	"description":"Organizing monthly contra dances in Portland, Maine",
 	"logo":"https://www.commonfloorcontra.dance/logo.png",
 	"image":"https://www.commonfloorcontra.dance/logo.png",
-	"sameAs":"https://www.commongfloorcontra.dance",
+	"sameAs":["https://www.commongfloorcontra.dance","https://www.facebook.com/groups/commonfloorcontradance"],
 	"location": {
 		"@type":"Place",
 		"address": {
@@ -101,6 +102,7 @@
 	"image":"https://www.commonfloorcontra.dance/logo.png",
 	"inLanguage":"English",
 	"keywords":"contra,dance,contradance,portland,maine,halloween",
+	"sameAs":[],
 	"location": {
 		"@type":"Place",
 		"address": {
@@ -113,6 +115,7 @@
 		},
 		"name":"Temple Beth El",
 		"url":"https://www.tbemaine.org/",
+		"sameAs":"https://www.tbemaine.org/",
 		"@context": "http://schema.org"
 	},
 	"name":"Portland Temple Contra Dance",
