add sameas for dance event

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 	"image":"https://www.commonfloorcontra.dance/logo.png",
 	"inLanguage":"English",
 	"keywords":"contra,dance,contradance,portland,maine,halloween",
-	"sameAs":[],
+	"sameAs":["https://www.facebook.com/events/1529164747513936"],
 	"location": {
 		"@type":"Place",
 		"address": {
@@ -118,7 +118,7 @@
 		"sameAs":"https://www.tbemaine.org/",
 		"@context": "http://schema.org"
 	},
-	"name":"Portland Temple Contra Dance",
+	"name":"Portland Common Floor Contra Dance",
 	"organizer": {
 		"@type": "Organization",
 		"name":"Common Floor Contra Dance",
@@ -191,7 +191,7 @@
 		"@context": "http://schema.org"
 	},
 	"image":"https://www.commonfloorcontra.dance/logo.png",
-	"name":"Portland Temple Contra Dance",
+	"name":"Portland Common Floor Contra Dance",
 	"openingHours":"Su 19:00-22:00",
 	"email":"commonfloorcontradance@gmail.com",
 	"url": "https://www.commonfloorcontra.dance",
