Add menu classes

--- a/index.html
+++ b/index.html
@@ -204,12 +204,12 @@
 		
 	</head>
 	<body>
-		<div>
-			<a href="\about">❱ About</a><br>
-			<a href="\volunteer">❱ Volunteer</a><br>
-			<a href="\policies">❱ Policies</a><br>
-			<a href="https://www.facebook.com/groups/commonfloorcontradance/">❱ Facebook Group</a><br>
-			<a href="mailto:CommonFloorContraDance@gmail.com">❱ Email Us (or ask to subscribe)</a><br>
+		<div class="menu">
+			<a class="menuItem" href="\about">❱ About</a><br>
+			<a class="menuItem" href="\volunteer">❱ Volunteer</a><br>
+			<a class="menuItem" href="\policies">❱ Policies</a><br>
+			<a class="menuItem" href="https://www.facebook.com/groups/commonfloorcontradance/">❱ Facebook Group</a><br>
+			<a class="menuItem" href="mailto:CommonFloorContraDance@gmail.com">❱ Email Us (or ask to subscribe)</a><br>
 		</div>
 		<iframe src="https://docs.google.com/document/d/e/2PACX-1vSz9cH1aF427AoqqOU56kdjFRR-FMkQFTVGlQGcgKoeXHYTE_CKi52BYPYymqHA3wVzgsdz27CC44XA/pub?embedded=true"
 				frameborder=0 style='height: 100%; width: 100%'>
