link to facebook event

--- a/index.html
+++ b/index.html
@@ -91,7 +91,6 @@
 }
 </script>
 	
-		<!--"sameAs":["https://www.facebook.com/events/1529164747513936"],-->
 <script type="application/ld+json">
 {
 	"@context": "http://schema.org/",
@@ -104,7 +103,7 @@
 	"image":"https://www.commonfloorcontra.dance/logo.png",
 	"inLanguage":"English",
 	"keywords":"contra,dance,contradance,portland,maine",
-	
+	"sameAs":["https://www.facebook.com/events/863410828160251"]
 	"location": {
 		"@type":"Place",
 		"address": {
