remove dance event ldjson, other organizers can't update it.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 }
 </script>
 	
-<script type="application/ld+json">
+<!--script type="application/ld+json">
 {
 	"@context": "http://schema.org/",
 	"@type": "DanceEvent",
@@ -103,7 +103,7 @@
 	"image":"https://www.commonfloorcontra.dance/logo.png",
 	"inLanguage":"English",
 	"keywords":"contra,dance,contradance,portland,maine",
-	"sameAs":["https://www.facebook.com/events/863410828160251"]
+	"sameAs":["https://www.facebook.com/events/863410828160251"],
 	"location": {
 		"@type":"Place",
 		"address": {
@@ -177,7 +177,7 @@
 	}],
 	"url":"https://www.CommonFloorContra.Dance"
 }
-</script>
+</script-->
 		
 <script type="application/ld+json">
 {
