Adding an <h1> to appease the bing gods

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="keywords" content="common floor contra dance Portland Maine">
 		<meta name="description" content="A monthly contra dance series in Portland, Maine.">
+		<meta http-equiv="content-language" content="en-us">
 		<link rel="icon" type="image/x-icon" href="logo.png">
 		<link rel="apple-touch-icon" href="logo.png"/>
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
@@ -211,6 +212,7 @@
 			<a class="menuItem" href="https://www.facebook.com/groups/commonfloorcontradance/">❱ Facebook Group</a><br>
 			<a class="menuItem" href="mailto:CommonFloorContraDance@gmail.com">❱ Email Us (or ask to subscribe)</a><br>
 		</div>
+		<h1>Common Floor Contra Dance - Portland, Maine</h1>
 		<iframe src="https://docs.google.com/document/d/e/2PACX-1vSz9cH1aF427AoqqOU56kdjFRR-FMkQFTVGlQGcgKoeXHYTE_CKi52BYPYymqHA3wVzgsdz27CC44XA/pub?embedded=true"
 				frameborder=0 style='height: 100%; width: 100%'>
 		</iframe>
