--- a/policies.html
+++ b/policies.html
@@ -6,6 +6,8 @@
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="keywords" content="common floor contra dance policies">
+		<meta name="description" content="Policies for our monthly contra dance series in Portland, Maine.">
+		<meta http-equiv="content-language" content="en-us">
 		<link rel="icon" type="image/x-icon" href="logo.png">
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 		<link rel="canonical" href="https://www.commonfloorcontra.dance/policies" media="screen"/>
