--- a/details.html
+++ b/details.html
@@ -14,7 +14,7 @@
 		<div>
 			<a href="/">❰ Home</a>
 		</div>
-		<iframe src="https://docs.google.com/document/d/e/2PACX-1vT--0Z4koUida-BYCpUu9DSJJkQitEmlbh8LQAVL6Ggw2MoC2tVdz3roKJeR6PsWhnQTeqrg7jj_Knw/pub?embedded=true"
+		<iframe src="https://proxybyregex.azurewebsites.net/api/ProxyByRegex?url=https://docs.google.com/document/d/e/2PACX-1vT--0Z4koUida-BYCpUu9DSJJkQitEmlbh8LQAVL6Ggw2MoC2tVdz3roKJeR6PsWhnQTeqrg7jj_Knw/pub?embedded=true"
 			frameborder=0 style='height: 100%; width: 100%'>
 		</iframe>
 	</body>
