--- a/index.html
+++ b/index.html
@@ -62,13 +62,6 @@
 		},{
 			"@type": "OrganizationRole",
 			"member": {
-				"@type": "Person",
-				"name": "Danielle Walczak"
-			},
-			"roleName": ["organizer"]
-		},{
-			"@type": "OrganizationRole",
-			"member": {
 			  "@type": "Person",
 			  "name": "Hannah Chamberlain"
 			},
@@ -77,14 +70,14 @@
 			"@type": "OrganizationRole",
 			"member": {
 				"@type": "Person",
-				"name": "Jennifer Dryden"
+				"name": "Hannah Brown"
 			},
 			"roleName": ["organizer"]
 		},{
 			"@type": "OrganizationRole",
 			"member": {
 				"@type": "Person",
-				"name": "Samson Fowler"
+				"name": "Josh Saklad"
 			},
 			"roleName": ["organizer"]
 		}],
@@ -213,7 +206,7 @@
 			<a class="menuItem" href="mailto:CommonFloorContraDance@gmail.com">❱ Email Us (or ask to subscribe)</a><br>
 		</div>
 		<h1>Common Floor Contra Dance - Portland, Maine</h1>
-		<iframe src="https://docs.google.com/document/d/e/2PACX-1vSz9cH1aF427AoqqOU56kdjFRR-FMkQFTVGlQGcgKoeXHYTE_CKi52BYPYymqHA3wVzgsdz27CC44XA/pub?embedded=true"
+		<iframe src="https://proxybyregex.azurewebsites.net/api/ProxyByRegex?url=https://docs.google.com/document/d/e/2PACX-1vSz9cH1aF427AoqqOU56kdjFRR-FMkQFTVGlQGcgKoeXHYTE_CKi52BYPYymqHA3wVzgsdz27CC44XA/pub?embedded=true"
 				frameborder=0 style='height: 100%; width: 100%'>
 		</iframe>
 	</body>
