--- a/policies.html
+++ b/policies.html
@@ -16,7 +16,7 @@
 		<div>
 			<a href="/">❰ Home</a>
 		</div>
-		<iframe src="https://docs.google.com/document/d/e/2PACX-1vTzv1HPM2BgnLkStGsrLMVQVnFimwRnXUx7PqcyhnXhVqTlJYiMrfgTHhfZ5k3N9fHoto56j7ZbI-eM/pub?embedded=true"
+		<iframe src="https://proxybyregex.azurewebsites.net/api/ProxyByRegex?url=https://docs.google.com/document/d/e/2PACX-1vTzv1HPM2BgnLkStGsrLMVQVnFimwRnXUx7PqcyhnXhVqTlJYiMrfgTHhfZ5k3N9fHoto56j7ZbI-eM/pub?embedded=true"
 			frameborder=0 style='height: 100%; width: 100%'>
 		</iframe>
 </body>
