Add proxy by regex

--- a/volunteer.html
+++ b/volunteer.html
@@ -14,7 +14,7 @@
 		<div>
 			<a href="/">❰ Home</a>
 		</div>
-		<iframe src="https://docs.google.com/document/d/e/2PACX-1vRXIDmRokfoHX2UjrLSeXlFcW6YGil0EmHjnHoLYAmfr35pVTg50Nm21Bn2LqL9FgQxBYHjFQcqUq-Y/pub?embedded=true"
+		<iframe src="https://proxybyregex.azurewebsites.net/api/ProxyByRegex?url=https://docs.google.com/document/d/e/2PACX-1vRXIDmRokfoHX2UjrLSeXlFcW6YGil0EmHjnHoLYAmfr35pVTg50Nm21Bn2LqL9FgQxBYHjFQcqUq-Y/pub?embedded=true"
 			frameborder=0 style='height: 100%; width: 100%'>
 		</iframe>
 	</body>
