--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@
 	"@context":"http://schema.org"
 }
 </script>
-		
-		
-		
+
+<script data-goatcounter="https://cfcd.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+
 	</head>
 	<body>
 		<div class="menu">
