Add goat counter to details

--- a/details.html
+++ b/details.html
@@ -9,6 +9,8 @@
 		<link rel="icon" type="image/x-icon" href="logo.png">
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 		<link rel="canonical" href="https://www.commonfloorcontra.dance/details" media="screen"/>
+		
+		<script data-goatcounter="https://cfcd.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 	</head>
 	<body>
 		<div>
