--- a/survey.html
+++ b/survey.html
@@ -17,8 +17,8 @@
 			<a href="/">❰ Home</a>
 		</div>
 		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfH4b6Vkg0hqCi1rL3yKg1u2zkhKmURNLBs1_nzEHgjP4YnUA/viewform?embedded=true"
-            width="640"
-            height="5790"
+            width="100%"
+            height="100%"
             frameborder="0"
             marginheight="0"
             marginwidth="0">
