testing a car-pool board

--- a/details.html
+++ b/details.html
@@ -16,8 +16,13 @@
 		<div>
 			<a href="/">❰ Home</a>
 		</div>
+		<!--
 		<iframe src="https://proxybyregex.azurewebsites.net/api/ProxyByRegex?url=https://docs.google.com/document/d/e/2PACX-1vT--0Z4koUida-BYCpUu9DSJJkQitEmlbh8LQAVL6Ggw2MoC2tVdz3roKJeR6PsWhnQTeqrg7jj_Knw/pub?embedded=true"
 			frameborder=0 style='height: 100%; width: 100%'>
+		</iframe>-->
+		<iframe name="embed_readwrite"
+			src="https://board.net/p/Maine_Contra_Carpool?showChat=true&showLineNumbers=false&showChat=false&showControls=false"
+			style='height: 100%; width: 100%; border: none;' frameborder="0">
 		</iframe>
 	</body>
 </html>
