--- a/details.html
+++ b/details.html
@@ -16,6 +16,27 @@
 		<div>
 			<a href="/">❰ Home</a>
 		</div>
+
+		<div id="calendar">Loading...</div>
+
+		<script>
+			async function fetchCalendar() {
+				try {
+					const response = await fetch('https://icalprocessor.azurewebsites.net/api/GetNext/commonfloorcontradance@gmail.com?format=html');
+					if (!response.ok) {
+						throw new Error(`HTTP error! status: ${response.status}`);
+					}
+					const data = await response.text();
+					document.getElementById('calendar').innerHTML = data;
+				} catch (error) {
+					console.error('Error fetching calendar:', error);
+					document.getElementById('calendar').innerHTML = 'Failed to load calendar.';
+				}
+			}
+
+			fetchCalendar();
+		</script>
+
 		<iframe src="https://proxybyregex.azurewebsites.net/api/ProxyByRegex?url=https://docs.google.com/document/d/e/2PACX-1vT--0Z4koUida-BYCpUu9DSJJkQitEmlbh8LQAVL6Ggw2MoC2tVdz3roKJeR6PsWhnQTeqrg7jj_Knw/pub?embedded=true"
 			frameborder=0 style='height: 100%; width: 100%'>
 		</iframe>
